test fix smartphone keyboard shifting page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,13 @@
 body {
   background: url("../images/blackboard.webp") no-repeat; /* https://pixabay.com/ */
   background-size: cover;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   color: white;
   font-family: "Comic Neue", cursive;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 h1 {
